Update ESPN schedule instructions with clearer details

--- a/templates/index.html
+++ b/templates/index.html
@@ -286,10 +286,11 @@
                     <div class="instructions">
                         <strong>How to get the data:</strong>
                         <ol>
-                            <li>Go to ESPN's NCAA Basketball scoreboard</li>
-                            <li>Select today's date</li>
-                            <li>Copy all the game information (teams, times, spreads)</li>
-                            <li>Paste it in the box below</li>
+                            <li>Go to this link: <a href="https://www.espn.com/mens-college-basketball/scoreboard/_/seasontype/2/group/50" target="_blank" style="color: #667eea; font-weight: 600;">https://www.espn.com/mens-college-basketball/scoreboard/_/seasontype/2/group/50</a></li>
+                            <li>Make sure <strong>"Division I"</strong> is selected in the dropdown so all games on that day display</li>
+                            <li>Start highlighting where the <strong>date</strong> is (e.g., "Thursday, January 1, 2026")</li>
+                            <li>Finish highlighting where the last game's <strong>"Gamecast" button</strong> is</li>
+                            <li>Copy (Ctrl+C or Cmd+C) and paste it in the box below</li>
                         </ol>
                     </div>
                     <label for="espn_schedule">ESPN Schedule Data:</label>
