Add direct links and clearer instructions for data sources

--- a/templates/index.html
+++ b/templates/index.html
@@ -302,8 +302,8 @@
                     <div class="instructions">
                         <strong>How to get the data:</strong>
                         <ol>
-                            <li>Go to TeamRankings.com NCAA Basketball ATS page</li>
-                            <li>Copy the table with team rankings, ATS records, cover %, and ATS +/-</li>
+                            <li>Go to this link: <a href="https://www.teamrankings.com/ncb/trends/ats_trends/" target="_blank" style="color: #667eea; font-weight: 600;">https://www.teamrankings.com/ncb/trends/ats_trends/</a></li>
+                            <li>Copy the entire table with team rankings, ATS records, cover %, and ATS +/-</li>
                             <li>Paste it in the box below</li>
                         </ol>
                     </div>
